# builtwithdjango

./: .babelrc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.workers  Makefile  README.md  db.sqlite3  db.sqlite3.backup  db.sqlite3.backup.old  docker-compose.yml  gunicorn.config.py  manage.py  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  webpack-stats.json  webpack.config.js
.ai/rules/: logging.md
.ai/tasks/: improve_active_site_check.md  update_site_design.md
.github/: FUNDING.yml
.github/workflows/: FUNDING.yml  claude-automated.yml  claude-code-review.yml  deploy-dev-workers.yml  deploy-dev.yml  deploy-workers.yml  deploy.yml  main.yml
api/: serializers.py  urls.py  views.py
assets/bundles/: app.js  main.css  webpack-stats.json
assets/js/: index.js
blog/: admin.py  feeds.py  forms.py  models.py  tasks.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20210827_1900.py  0003_auto_20210827_1907.py  0004_post_description.py  0005_auto_20220123_0516.py  0006_alter_post_thumbnail.py  0007_remove_post_thumbnail.py  0008_comment.py  0009_rename_project_comment_post.py  0010_auto_20220719_0313.py  0011_post_type.py
blog/templatetags/: markdown_extras.py  url_utils.py
builtwithdjango/: .env  asgi.py  celery.py  logging_utils.py  settings.py  sitemaps.py  urls.py  utils.py  wsgi.py
deployment/: Dockerfile.python  Dockerfile.server  Dockerfile.workers  bwd.celery  bwd.celery.conf  bwd.celery.service  bwd.celerybeat.service  bwd.django_q.service  bwd.gunicorn.service  bwd.gunicorn.socket  dj_stripe-2.10.4-py3-none-any.whl  entrypoint.sh  gunicorn.config.py  nginx.conf  prod-shell.sh
developers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
developers/migrations/: 0001_initial.py  0002_alter_developer_user.py
frontend/webpack/: webpack.config.dev.js  webpack.config.prod.js  webpack.config.watch.js
jobs/: admin.py  apps.py  feeds.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
jobs/migrations/: 0001_initial.py  0002_rename_jobs_job.py  0003_auto_20210814_0255.py  0004_alter_job_options.py  0005_job_approved.py  0006_alter_company_options.py  0007_company_project.py  0008_alter_job_company.py  0009_job_slug.py  0010_auto_20211105_1458.py  0011_job_company_simple.py  0012_rename_company_simple_job_company_name.py  0013_alter_job_company.py  0014_auto_20211122_1553.py  0015_job_paid.py  0016_alter_job_slug.py  0017_alter_job_slug.py  0018_auto_20220204_1956.py  0019_job_company_logo.py  0020_job_external_id_job_source_job_submitted_datetime_and_more.py  0020_job_source_specific_data_job_submitted_datetime.py  0021_alter_job_listing_url.py  0021_remove_job_source_specific_data_job_external_id_and_more.py  0022_alter_job_created_datetime_and_more.py  0022_alter_job_location.py
jobs/templatetags/: markdown_extras.py
makers/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
makers/migrations/: 0001_initial.py  0002_alter_maker_table.py  0003_maker_user.py  0004_maker_short_bio.py
newsletter/: admin.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
newsletter/migrations/: 0001_initial.py  0002_alter_emails_id.py  0003_auto_20210603_0258.py  0004_auto_20210603_0334.py
pages/: admin.py  forms.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_cisterciandatenftrequest_wallet_public_key.py  0003_alter_cisterciandatenftrequest_date_requested.py  0004_auto_20210915_0200.py  0005_cisterciandatenftrequest_email_confirmed.py
podcast/: admin.py  apps.py  models.py  urls.py  views.py
podcast/migrations/: 0001_initial.py  0002_auto_20210812_1639.py  0003_episode_thumbnail.py  0004_episode_slug.py  0005_auto_20210813_0303.py  0006_auto_20210813_0323.py  0007_alter_episode_options.py  0008_alter_episode_options.py  0009_alter_episode_options.py  0010_alter_episode_maker.py  0011_episode_youtube_html_embed.py
podcast/templatetags/: markdown_extras.py
projects/: admin.py  filters.py  forms.py  hooks.py  models.py  schemas.py  serializers.py  sitemaps.py  tasks.py  tests.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20191204_0555.py  0002_auto_20210528_1545.py  0002_comment.py  0003_auto_20191204_1055.py  0003_auto_20210603_0228.py  0004_auto_20191204_1058.py  0004_auto_20210603_0257.py  0005_auto_20191204_1059.py  0005_auto_20210603_0334.py  0006_auto_20191204_1303.py  0006_auto_20210608_1130.py  0007_alter_project_technologies.py  0007_auto_20191205_1016.py  0013_like.py  (+33 more)
snippets/: remove_bad_subs_from_buttondown.py
templates/: base.html  home.html  submit_project.html  sucessfull-submit.html
tools/: urls.py  views.py
users/: admin.py  apps.py  context_processors.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py  webhooks.py
(+104 files in other folders)
