[tool.poetry]
name = "builtwithdjango"
version = "0.4.1"
description = "Source code for the builtwithdjango.com website."
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.djlint]
profile = "django"
ignore = "H006,H023,H031,H021,H005,H030,H020,H016,D018"
exclude = "support.html"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-autoslug = "^1.9.7"
django-environ = "^0.4.5"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
requests = "^2.23.0"
sentry_sdk = "^0.14.3"
django-component = "^0.1.6"
Pillow = ">=8.0.0"
Markdown = "^3.3.4"
django-model-utils = "^4.1.1"
django-extensions = "^3.1.3"
django-filter = "^2.4.0"
django-anymail = {extras = ["mailgun"], version = "^8.4"}
django-allauth = "^0.45.0"
django-rest-auth = {extras = ["with_social"], version = "^0.9.5"}
stripe = "^2.63.0"
cloudinary = "^1.28.1"
django-widget-tweaks = "^1.4.12"
django-q = "^1.3.9"
python-webpack-boilerplate = "^1.0.0"
Pygments = "^2.12.0"
kolo = "^1.7.0"
dj-stripe = "^2.7"
django-robots = "^5.0"
django-taggit = "^3.1.0"
pytz = "^2022.7.1"
psycopg2 = "^2.9.5"
whitenoise = "^6.4.0"
django-storages = "^1.13.2"
boto3 = "^1.26.153"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.5.3"
pre-commit = "^2.6.0"
pylint-django = "^2.2.0"
flake8 = "^3.9.2"
djlint = "^1.2.0"
kolo = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
