[tool.poetry]
name = "builtwithdjango"
version = "0.4.1"
description = "Source code for the builtwithdjango.com website."
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'

[tool.djlint]
profile = "django"
ignore = "H006,H023,H031,H021,H005,H030,H020,H016,D018,H011"
exclude = "support.html"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.poetry.dependencies]
python = "^3.11"
django-autoslug = "^1.9.7"
django-environ = "^0.4.5"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
requests = "^2.23.0"
django-component = "^0.1.6"
Pillow = ">=8.0.0"
Markdown = "^3.3.4"
django-model-utils = "^4.1.1"
django-extensions = "^3.1.3"
django-filter = "^2.4.0"
django-allauth = "^0.45.0"
django-rest-auth = {extras = ["with_social"], version = "^0.9.5"}
stripe = "^2.63.0"
cloudinary = "^1.28.1"
django-widget-tweaks = "^1.4.12"
python-webpack-boilerplate = "^1.0.0"
Pygments = "^2.12.0"
dj-stripe = "^2.7"
django-robots = "^5.0"
pytz = "^2022.7.1"
psycopg2 = "^2.9.5"
whitenoise = "^6.4.0"
django-storages = "^1.13.2"
boto3 = "^1.26.154"
posthog = "^3.4.0"
uvicorn = "^0.29.0"
django = "^5.0.3"
django-q2 = "^1.6.2"
redis = "^5.0.3"
django-anymail = {extras = ["mailgun"], version = "^10.3"}
ipython = "^8.23.0"
djlint = "^1.35.2"
structlog = "^24.4.0"
django-structlog = "^8.1.0"
sentry-sdk = "^2.20.0"
pydantic-ai = "^0.0.24"
twikit = "^2.3.3"
google-genai = "^1.28.0"
logfire = "^4.3.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.5.3"
pre-commit = "^2.6.0"
pylint-django = "^2.2.0"
djlint = "^1.2.0"
kolo = "^1.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
